<resources>
    <string name="app_name">Rental Finder™</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="email_placeholder">user@mail.com</string>
    <string name="account_new"><u>First time? Start here</u></string>
    <string name="apartment">Add Apartment</string>
    <string name="apartment_name">Apartment Name</string>
    <string name="apartment_location">Location</string>
    <string name="apartment_description">Description</string>
    <string name="apartment_image">Image</string>
    <string name="add_image">Select Image</string>
    <string name="change_image">Update Image</string>
    <string name="add">Add</string>
    <string name="apartments">View Apartments</string>
    <string name="users">View Users</string>
    <string name="responsibility">View Responsibility</string>
    <string name="add_apartments">Add Apartments</string>
    <string name="add_users">Add Users</string>
    <string name="add_responsibility">Add Responsibility</string>
    <string name="view_apartment">View Apartment</string>
    <string name="status">Room Status</string>
    <string name="available">Available</string>
    <string name="rent">Rent Ksh (pm)</string>
    <string name="rent_placeholder">Ksh 0.00</string>
    <string name="principal_contact">Principal Contact</string>
    <string name="principal_placeholder">070000000</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="sign_up">Sign Up</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="refresh">Retry</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_format">YYYY-MM-DD</string>
    <string name="error">An error occurred!</string>
    <string name="back">Back</string>
</resources>
