<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/sign_up"
                android:textSize="26sp" />


            <ImageButton
                android:id="@+id/imageButtonBack"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:background="@drawable/buttons"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                app:srcCompat="@drawable/back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="12dp"
                    android:text="@string/first_name"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/person"
                    android:gravity="center"
                    android:inputType="text"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="12dp"
                    android:text="@string/last_name"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/person"
                    android:gravity="center"
                    android:inputType="text"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="12dp"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/emailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/email"
                    android:gravity="center"
                    android:hint="@string/email_placeholder"
                    android:inputType="textEmailAddress"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="12dp"
                    android:text="@string/principal_contact"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/contact"
                    android:gravity="center"
                    android:hint="@string/principal_placeholder"
                    android:inputType="phone"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="12dp"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/dateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/calendar"
                    android:gravity="center"
                    android:hint="@string/date_format"
                    android:inputType="date"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:text="@string/password"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/password"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:text="@string/confirm_password"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/password"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:text="@string/gender"
                    android:textColor="@color/colorPrimary" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/light_text_view"
                    android:orientation="horizontal"
                    android:paddingTop="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp">

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/female"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/male"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/radio_others"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/other"
                        android:textColor="@color/black" />
                </RadioGroup>

                <Button
                    android:id="@+id/signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/buttons"
                    android:padding="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>