<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textSize="26sp"
        android:layout_marginBottom="32dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="4dp"
            android:layout_marginTop="16dp"
            android:paddingBottom="12dp"
            android:text="@string/email"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit_text"
            android:drawableStart="@drawable/email"
            android:gravity="center"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:text="@string/password"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit_text"
            android:drawableStart="@drawable/password"
            android:gravity="center"
            android:inputType="textPassword"
            android:padding="8dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:stateListAnimator="@null"
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/buttons"
            android:padding="8dp"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:elevation="0dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:focusable="auto"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:textSize="16sp"
            android:text="@string/account_new"
            android:textColor="@color/blue"
            android:drawableRight="@drawable/baseline_chevron_right_24"
            android:drawableTint="@color/blue"/>


    </LinearLayout>

</LinearLayout>