<?xml version="1.0" encoding="utf-8"?><!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:text="@string/apartment"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="12dp"
                    android:text="@string/apartment_name"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/apartmentName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/apartment"
                    android:gravity="center"
                    android:hint="@string/apartment_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="12dp"
                    android:text="@string/apartment_location"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/location"
                    android:gravity="center"
                    android:hint="@string/apartment_location"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="12dp"
                    android:text="@string/apartment_description"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/description"
                    android:gravity="center"
                    android:hint="@string/apartment_description"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="12dp"
                    android:text="@string/principal_contact"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/principalContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/contact"
                    android:gravity="center"
                    android:hint="@string/principal_placeholder"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="12dp"
                    android:text="@string/rent"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/rentAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/currency"
                    android:gravity="center"
                    android:hint="@string/rent_placeholder"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="12dp"
                    android:text="@string/apartment_image"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btnAddImage"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/add_image_button"
                    android:drawableStart="@drawable/image"
                    android:elevation="0dp"
                    android:padding="8dp"
                    android:text="@string/add_image"
                    android:textAllCaps="false"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/imageViewApartment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background=" @drawable/circle_image_view"
                    android:drawableStart="@drawable/upload"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/status"
                        android:textColor="@color/colorPrimary" />

                    <CheckBox
                        android:id="@+id/checkBoxStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/available"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnApartmentAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/buttons"
                    android:drawableStart="@drawable/add"
                    android:padding="8dp"
                    android:text="@string/add"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <!-- The toolbar-->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/colorWhite" />

    </FrameLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorWhite"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/navigation"
        app:itemIconTint="@color/colorPrimary"
        app:itemTextColor="@color/black"
        app:menu="@menu/drawer_view" />

</android.support.v4.widget.DrawerLayout>