<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/apartmentListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/apartmentF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/apartment"
            android:textColor="@color/dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="4dp"
            android:text="@string/apartment_description"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/locationF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/location_view"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="3dp"
            android:text="@string/apartment_location"
            android:textColor="@color/contact"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/text_view"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/rentF"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/currency"
                android:padding="4dp"
                android:text="@string/rent"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divider"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/contactF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/contact"
                android:padding="4dp"
                android:text="@string/principal_placeholder"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>